src/tests/test-src/errors/R29-getenv-unset.syntran
// R29: getenv-unset
// std::getenv() was given a name that isn't set in the environment

let v = std::getenv("SYNTRAN_NONEXISTENT_VAR_XYZ");
